fix events, jobs, and resources, box alignment

--- a/app/assets/stylesheets/resources.scss
+++ b/app/assets/stylesheets/resources.scss
@@ -30,5 +30,12 @@
   right: 0;
   height: 100px;
   background-color: purple;
-z-index: 0;
+  z-index: 0;
+}
+
+
+
+.title{
+  display: inline-block;
+  float: left;
 }
