--- a/app/assets/stylesheets/search.scss
+++ b/app/assets/stylesheets/search.scss
@@ -161,16 +161,7 @@ display: inline-block;
   float: left;
     direction:rtl;
 }
-.FE{
 
-    //   width: 100%;
-    //   height: 320px;
-    //   overflow: scroll;
-    // direction:rtl;
-
-
-// height: 500px;
-}
 
 .general-search{
   width: 735px;
